adding who_did_what image

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -10,3 +10,7 @@ div.tags {
     display: flex;
     justify-content: space-between;
 }
+
+figcaption, .figure .caption {
+    text-align: justify;
+}
